# beringei

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  PATENTS  README.md  Vagrantfile  browser-extension.json  circle.yml  fbthrift.patch  setup_ubuntu.sh
beringei/: CMakeLists.txt  clang-format.sh
beringei/client/: BeringeiClient.cpp  BeringeiClient.h  BeringeiClientImpl.cpp  BeringeiClientImpl.h  BeringeiConfigurationAdapterIf.h  BeringeiGetResult.cpp  BeringeiGetResult.h  BeringeiHostWriter.cpp  BeringeiHostWriter.h  BeringeiNetworkClient.cpp  BeringeiNetworkClient.h  BeringeiScanShardResult.cpp  BeringeiScanShardResult.h  BeringeiWriter.cpp  BeringeiWriter.h  CMakeLists.txt  RequestBatchingQueue.cpp  RequestBatchingQueue.h  WriteClient.cpp  WriteClient.h
beringei/client/tests/: BeringeiClientTest.cpp  BeringeiGetResultTest.cpp  CMakeLists.txt  MockConfigurationAdapter.h  RequestBatchingQueueTest.cpp
beringei/cmake/: BeringeiCompilerOptions.cmake  FindDoubleConversion.cmake  FindFBThrift.cmake  FindFolly.cmake  FindGFlags.cmake  FindGlog.cmake  FindProxygen.cmake  FindWangle.cmake  FindZStd.cmake
beringei/if/: CMakeLists.txt  Topology.thrift  beringei.thrift  beringei_data.thrift  beringei_grafana.thrift  beringei_query.thrift  build_thrift.sh
beringei/lib/: BitUtil.cpp  BitUtil.h  BucketLogWriter.cpp  BucketLogWriter.h  BucketMap.cpp  BucketMap.h  BucketStorage.cpp  BucketStorage.h  BucketStorageHotCold.cpp  BucketStorageHotCold.h  BucketUtils.cpp  BucketUtils.h  BucketedTimeSeries.cpp  BucketedTimeSeries.h  CMakeLists.txt  CaseUtils.cpp  CaseUtils.h  DataBlock.h  DataBlockIO.cpp  DataBlockIO.h  DataBlockPosition.cpp  DataBlockPosition.h  DataBlockReader.cpp  DataBlockReader.h  DataLog.cpp  DataLog.h  DataLogUtil.cpp  DataLogUtil.h  FileUtils.cpp  FileUtils.h  GorillaDumperUtils.cpp  GorillaDumperUtils.h  GorillaStatsManager.cpp  GorillaStatsManager.h  GorillaTimeConstants.h  KeyListReader.cpp  KeyListReader.h  KeyListWriter.cpp  KeyListWriter.h  LogReader.cpp  (+17 more)
beringei/lib/tests/: BitUtilTest.cpp  BucketLogWriterTest.cpp  BucketMapTest.cpp  BucketStorageTest.cpp  BucketedTimeSeriesTest.cpp  CMakeLists.txt  CaseUtilsTest.cpp  DataLogTest.cpp  FileUtilsTest.cpp  GorillaDumperUtilsTest.cpp  KeyListWriterTest.cpp  LocalKeyReaderTest.cpp  MockMemoryUsageGuard.h  PersistentKeyListTest.cpp  TestDataLoader.cpp  TestDataLoader.h  TestKeyList.cpp  TestKeyList.h  TimeSeriesStreamTest.cpp  TimeSeriesTest.cpp  TimerTest.cpp  samples5000.txt
beringei/plugins/: BeringeiConfigurationAdapter.cpp  BeringeiConfigurationAdapter.h  BeringeiConfigurationLoader.cpp  BeringeiConfigurationLoader.h  BeringeiInternalConfiguration.h  CMakeLists.txt
beringei/plugins/tests/: BeringeiConfigurationAdapterTest.cpp  BeringeiConfigurationTest.cpp  BeringeiConfigurationValidationTest.cpp  CMakeLists.txt
beringei/plugins/tests/testfiles/: BeringeiConfig1.json  BeringeiConfig2.json
beringei/service/: BeringeiMain.cpp  BeringeiServiceHandler.cpp  BeringeiServiceHandler.h  CMakeLists.txt
beringei/service/tests/: BeringeiServiceHandlerTest.cpp  CMakeLists.txt
beringei/tools/: BeringeiConfigurationGenerator.cpp  BeringeiGet.cpp  BeringeiPut.cpp  CMakeLists.txt
beringei/tools/grafana_read_service/: BeringeiGrafanaServer.cpp  CMakeLists.txt  DateUtils.h  GrafanaServiceFactory.cpp  GrafanaServiceFactory.h  NotFoundHandler.cpp  QueryHandler.cpp  QueryHandler.h  TestConnectionHandler.cpp  TestConnectionHandler.h
beringei/tools/plain_text_service/: BeringeiPlainTextServer.cpp  CMakeLists.txt  DateUtils.h  FetchHandler.cpp  FetchHandler.h  NotFoundHandler.cpp  PlainTextServiceFactory.cpp  PlainTextServiceFactory.h  TestConnectionHandler.cpp  TestConnectionHandler.h  UpdateHandler.cpp  UpdateHandler.h
beringei/tools/query_service/: AggregatorService.cpp  AggregatorService.h  AlertsWriteHandler.cpp  AlertsWriteHandler.h  BeringeiData.cpp  BeringeiData.h  BeringeiQueryServer.cpp  CMakeLists.txt  EventsWriteHandler.cpp  EventsWriteHandler.h  LogsWriteHandler.cpp  LogsWriteHandler.h  MySqlClient.cpp  MySqlClient.h  NotFoundHandler.cpp  NotFoundHandler.h  QueryHandler.cpp  QueryHandler.h  QueryServiceFactory.cpp  QueryServiceFactory.h  ScanRespWriteHandler.cpp  ScanRespWriteHandler.h  StatsTypeAheadCache.cpp  StatsTypeAheadCache.h  StatsTypeAheadCacheHandler.cpp  StatsTypeAheadCacheHandler.h  StatsTypeAheadHandler.cpp  StatsTypeAheadHandler.h  StatsWriteHandler.cpp  StatsWriteHandler.h  TableQueryHandler.cpp  TableQueryHandler.h  WriteHandler.cpp  WriteHandler.h
