# Copyright (c) 2016-present, Facebook, Inc.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree. An additional grant
# of patent rights can be found in the PATENTS file in the same directory.

add_subdirectory(if)
add_subdirectory(lib)
add_subdirectory(client)
add_subdirectory(plugins)
add_subdirectory(service)
add_subdirectory(tools)
